# rethinking_stats_numpyro

./: pyproject.toml
homework/: hw2.ipynb
notebooks/: 02_small_worlds_and_large_worlds.ipynb  03_sampling_the_imaginary.ipynb  04_geocentric_models.ipynb
