[project]
name = "rethinking-numpyro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.21.0",
    "daft>=0.5.0",
    "ipykernel>=6.29.5",
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpyro>=0.18.0",
    "scipy>=1.15.3",
]
